[project]
name = "resume-sessions"
version = "0.1.0"
description = "LLM-generated session titles for AI coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Thomas Mustier"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
resume-sessions = "resume_sessions:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/resume_sessions"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
